changing manualOptions due to project goal change, also fixing some box overlap on index page

--- a/pages/style/style2.css
+++ b/pages/style/style2.css
@@ -58,6 +58,7 @@ body {
     border-radius: 25px;
     border: 2px solid #eff5e8;
     padding: 30px;
+    margin: 0px 0px 20px 0px;
 
 }
 
@@ -78,6 +79,7 @@ select {
     border-radius: 25px;
     border: 2px solid #eff5e8;
     padding: 30px;
+    margin: 0px 0px 20px 0px;
 
 }
 
